# atlas

./: .gitignore  README.md  pyproject.toml  quick_test.py
atlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/atlas/: cli.py
src/atlas.egg-info/: SOURCES.txt
src/atlas/adapters/: pymupdf.py
src/atlas/core/: __init__.py  enums.py  gemoetry.py  geometry.py  object.py
src/atlas/doc/: architecture.md  extraction.md
src/atlas/models/: __init__.py  document.py  line.py  node.py  page.py  span.py
src/atlas/pdf/: __init__.py  extractor.py  mapper.py
tests/: test_extractor.py  test_geometry.py  test_mapper.py  test_models.py  test_raw.py
tests/integration/: test_real_pdf.py
